# yandex-brown-course

./: CMakeLists.txt  Solution.cpp  budget_bad_base.cpp  budget_good_base.cpp  bus.cpp  bus.h  collide.cpp  comment_server.cpp  concurrent_map_2.cpp  domains_bad_wa.cpp  geo2d.cpp  geo2d.h  graph.h  hash_set.cpp  ini.h  json.cpp  json.h  main.cpp  pipeline.cpp  profile.h  refactoring.cpp  request.h  route_item.h  router.h  set_iterator_next.cpp  stats_aggregator_test.cpp  stop.cpp  stop.h  string_parser.cpp  string_parser.h  task_info.cpp  test_domains.cpp  test_ini.cpp  test_runner.h  transport.cpp  transport.h  transport_a.cpp  transport_d.cpp  transport_e.cpp
last/: budget_bad_base.cpp  budget_desktop_version.cpp  budget_good_base.cpp  budget_professional_desktop_version.cpp  game_object.h  ini.cpp  polynomial.cpp  print_stats.cpp  print_stats_2.cpp  spendings_json.cpp
last/week_1/: hash_person.cpp  hash_point.cpp  secondary_index.cpp
last/week_2/: spendings_xml.cpp
last/week_2/restructuring/: main.cpp  stats_aggregator.cpp  stats_aggregator.h
last/week_3/: expression.cpp  lazy_value.cpp  synchronized_2.cpp
last/week_4/: unique_ptr.cpp
last/week_4/booking/: booking.h
last/week_4/cache/: Solution.cpp  cache_test.cpp
